src/test/ui/feature-gates/feature-gate-link_llvm_intrinsics.stderr
error[E0658]: linking to LLVM intrinsics is experimental
  --> $DIR/feature-gate-link_llvm_intrinsics.rs:3:5
   |
LL |     fn sqrt(x: f32) -> f32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29602
   = help: add #![feature(link_llvm_intrinsics)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
